bug-issue-1001 alignment issue

--- a/src/components/Post/index.css
+++ b/src/components/Post/index.css
@@ -379,3 +379,18 @@
     font-size: 14px;
   }
 }
+
+.postCaption{
+   color: var(--color);
+   padding-inline: 8px;
+    height:80px;
+}
+
+.postCaptiontext{
+   color: var(--color);
+   padding-inline: 8px;
+    height:80px;
+    display: flex;
+    align-items: flex-end;
+}
+
